--- a/JenkinsTest/Web.config
+++ b/JenkinsTest/Web.config
@@ -17,6 +17,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<add key="sdasdasdasdasda" value="true" />
+	<add key="good change" value="true" />
+	
 	
   </appSettings>
   <system.web>
